--- a/week03/HW/bootstrap-ui-index.html
+++ b/week03/HW/bootstrap-ui-index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
 
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+    <header class="mb-5">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand d-lg-none" href="#home">
             <img src="https://i.imgur.com/4UDum8j.png" alt="red-window-full-logo" class="img-fluid" style="width: 100px;">
@@ -32,7 +32,7 @@
               </li>
 
               <a class="navbar-brand d-none d-lg-block me-0 mx-3" href="#home">
-                <img src="https://i.imgur.com/4UDum8j.png" alt="red-window-full-logo" class="img-fluid" style="width: 150px;">
+                <img src="https://i.imgur.com/4UDum8j.png" alt="red-window-full-logo" class="img-fluid" style="width: 125px;">
               </a>
 
               <li class="nav-item mx-3">
@@ -48,7 +48,7 @@
       </nav>
     </header>
 
-    <main id="home">
+    <main id="home" class="pt-5">
       <section id="hero">
         <div class="row align-items-center g-5 p-5 mx-auto">
           <div class="col-12 col-lg-6">
