--- a/week13/Final-Project/Outfitters-Technologies.html
+++ b/week13/Final-Project/Outfitters-Technologies.html
@@ -236,8 +236,22 @@
                 </div>
             </div>
         </section>             
-
     </main>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-3">Inspiration Sites</h1>
+            </div>
+            <div class="col">
+                <a href="https://nuenofashion.com/" target="_blank">Nueno Fashion</a></p>
+                <a href="https://www.recurate.com/" target="_blank">Recurate</a></p>
+                <a href="https://www.techstylefashiongroup.com/" target="_blank">TechStyle Fashion Group</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
