--- a/week15/Final/outfitters-technologies.html
+++ b/week15/Final/outfitters-technologies.html
@@ -94,7 +94,7 @@
 
     <!--Outfits-->
 
-        <section id="section3" class="container-fluid reveal my-5 mx-lg-5 px-lg-5">
+        <section id="section3" class="container-fluid reveal my-5 mx-lg-5 px-5">
             <div class="row row-cols-1 row-cols-lg-3">
 
                 <div class="col col-lg-3 outfit-txt text-center">
@@ -102,19 +102,19 @@
                     <p id="p-body">Outfitters can help identify your body type and pair which styles look best for your shape</p>
                 </div>
                 <div class="col col-lg-5">
-                    <div id="carouselSlidesOnly" class="carousel slide offset-4" data-bs-ride="carousel">
+                    <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                <img src="../images/model1.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="../images/model1.png" class="img-fluid d-block" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="../images/model2.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="../images/model2.png" class="img-fluid d-block" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="../images/model3.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="../images/model3.png" class="img-fluid d-block" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="../images/model4.png" class="img-fluid d-block w-100" alt="...">
+                                <img src="../images/model4.png" class="img-fluid d-block" alt="...">
                                 </div>
                             </div>
     
